Fixed the compile issue